kubernetes/service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
  labels:
    app: fraud-detection-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fraud-detection-app
