kubernetes/ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-detection-ingress
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service1
            port:
              number: 8080

  defaultBackend:
    service:
      name: fraud-detection-service
      port:
        number: 8080
